Bug 1923168 - [part1] standardize skip-if conditions for devtools. r=devtools-reviewers,ochameau
Differential Revision: https://phabricator.services.mozilla.com/D224801

UltraBlame original commit: 6774895655591c55b679814a840446199e87a519

--- a/devtools/client/aboutdebugging/test/browser/browser.toml
+++ b/devtools/client/aboutdebugging/test/browser/browser.toml
@@ -345,6 +345,24 @@ linux
 '
 &
 &
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 debug
 "
 #
@@ -436,6 +454,24 @@ os
 =
 '
 mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 &
 &
@@ -785,6 +821,32 @@ if
 =
 [
 "
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 a11y_checks
 "
 ]
@@ -820,6 +882,24 @@ os
 =
 '
 linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 &
 &
@@ -863,6 +943,24 @@ os
 =
 '
 linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 #
@@ -956,6 +1054,32 @@ if
 =
 [
 "
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 a11y_checks
 "
 ]
@@ -980,6 +1104,32 @@ if
 =
 [
 "
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 a11y_checks
 "
 ]
@@ -1211,6 +1361,24 @@ os
 '
 mac
 '
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
 os
@@ -1218,6 +1386,24 @@ os
 =
 '
 linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 #
@@ -1241,6 +1427,17 @@ js
 [
 "
 browser_aboutdebugging_serviceworker_pushservice_url
+.
+js
+"
+]
+[
+"
+browser_aboutdebugging_serviceworker_runtime
+-
+page
+-
+origin
 .
 js
 "
@@ -1313,6 +1510,32 @@ if
 =
 [
 "
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 a11y_checks
 "
 ]
@@ -1428,6 +1651,32 @@ if
 =
 [
 "
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 a11y_checks
 "
 ]
@@ -1452,6 +1701,32 @@ if
 =
 [
 "
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 a11y_checks
 "
 ]
@@ -1529,17 +1804,6 @@ js
 [
 "
 browser_aboutdebugging_workers_remote_runtime
-.
-js
-"
-]
-[
-"
-browser_aboutdebugging_serviceworker_runtime
--
-page
--
-origin
 .
 js
 "
