--- a/devtools/client/accessibility/test/browser/browser.toml
+++ b/devtools/client/accessibility/test/browser/browser.toml
@@ -114,7 +114,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -141,6 +164,24 @@ os
 =
 '
 linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 &
 &
@@ -171,13 +212,22 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
 &
 &
-fission
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -272,8 +322,25 @@ linux
 '
 &
 &
-!
-debug
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 ]
 #
