--- a/devtools/client/application/test/browser/browser.toml
+++ b/devtools/client/application/test/browser/browser.toml
@@ -910,6 +910,24 @@ os
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -955,14 +973,25 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 #
 Bug
