--- a/devtools/client/framework/browser-toolbox/test/browser.toml
+++ b/devtools/client/framework/browser-toolbox/test/browser.toml
@@ -219,10 +219,22 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 &
 &
 debug
@@ -259,10 +271,22 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 &
 &
 debug
@@ -342,10 +366,22 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 &
 &
 !
@@ -390,7 +426,22 @@ mac
 '
 &
 &
-fission
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 ]
 #
