--- a/devtools/client/inspector/animation/test/browser.toml
+++ b/devtools/client/inspector/animation/test/browser.toml
@@ -515,11 +515,33 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
 &
 &
-!
-debug
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 #
 Disabled
@@ -541,20 +563,25 @@ linux
 '
 &
 &
-!
-debug
+os_version
+=
+=
+'
+18
+.
+04
+'
 &
 &
-!
-asan
+processor
+=
+=
+'
+x86_64
+'
 &
 &
-!
-swgl
-&
-&
-!
-ccov
+opt
 "
 #
 Bug
@@ -565,22 +592,6 @@ win11_2009
 #
 Bug
 1798331
-"
-a11y_checks
-&
-&
-debug
-"
-#
-Bugs
-1849028
-and
-1858041
-for
-causing
-intermittent
-test
-results
 ]
 [
 "
@@ -718,6 +729,24 @@ os
 =
 '
 linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 &
 &
@@ -871,6 +900,32 @@ if
 =
 [
 "
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 a11y_checks
 "
 ]
@@ -1098,8 +1153,7 @@ if
 verify
 &
 &
-!
-debug
+opt
 "
 ]
 [
@@ -1441,20 +1495,25 @@ linux
 '
 &
 &
-!
-asan
+os_version
+=
+=
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
 &
 &
-!
-swgl
-&
-&
-!
-ccov
+tsan
 "
 #
 Bug
@@ -1579,10 +1638,22 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 &
 &
 debug
