--- a/devtools/client/shared/test/browser.toml
+++ b/devtools/client/shared/test/browser.toml
@@ -452,7 +452,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -466,20 +489,25 @@ linux
 '
 &
 &
-!
-asan
+os_version
+=
+=
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
 &
 &
-!
-swgl
-&
-&
-!
-ccov
+opt
 "
 #
 Bug
@@ -535,7 +563,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -549,20 +600,25 @@ linux
 '
 &
 &
-!
-asan
+os_version
+=
+=
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
 &
 &
-!
-swgl
-&
-&
-!
-ccov
+opt
 "
 #
 Bug
@@ -783,6 +839,32 @@ if
 =
 [
 "
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 a11y_checks
 "
 ]
@@ -889,7 +971,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -903,40 +1008,29 @@ linux
 '
 &
 &
-!
-asan
+os_version
+=
+=
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
 &
 &
-!
-swgl
-&
-&
-!
-ccov
+opt
 "
 #
 Bug
 1721159
-"
-a11y_checks
-&
-&
-debug
-"
-#
-Bugs
-1849028
-and
-1858041
-for
-causing
-intermittent
-test
-results
 ]
 [
 "
@@ -953,7 +1047,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -967,20 +1084,25 @@ linux
 '
 &
 &
-!
-asan
+os_version
+=
+=
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
 &
 &
-!
-swgl
-&
-&
-!
-ccov
+opt
 "
 #
 Bug
@@ -1009,20 +1131,25 @@ linux
 '
 &
 &
-!
-asan
+os_version
+=
+=
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
 &
 &
-!
-swgl
-&
-&
-!
-ccov
+opt
 "
 ]
 #
@@ -1052,7 +1179,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -1066,20 +1216,25 @@ linux
 '
 &
 &
-!
-asan
+os_version
+=
+=
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
 &
 &
-!
-swgl
-&
-&
-!
-ccov
+opt
 "
 #
 Bug
@@ -1100,7 +1255,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -1114,20 +1292,25 @@ linux
 '
 &
 &
-!
-asan
+os_version
+=
+=
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
 &
 &
-!
-swgl
-&
-&
-!
-ccov
+opt
 "
 #
 Bug
@@ -1189,7 +1372,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -1203,20 +1409,25 @@ linux
 '
 &
 &
-!
-asan
+os_version
+=
+=
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
 &
 &
-!
-swgl
-&
-&
-!
-ccov
+opt
 "
 #
 Bug
@@ -1258,7 +1469,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -1272,20 +1506,25 @@ linux
 '
 &
 &
-!
-asan
+os_version
+=
+=
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
 &
 &
-!
-swgl
-&
-&
-!
-ccov
+opt
 "
 #
 Bug
@@ -1306,7 +1545,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -1320,20 +1582,25 @@ linux
 '
 &
 &
-!
-asan
+os_version
+=
+=
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
 &
 &
-!
-swgl
-&
-&
-!
-ccov
+opt
 "
 #
 Bug
@@ -1383,7 +1650,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -1397,20 +1687,25 @@ linux
 '
 &
 &
-!
-asan
+os_version
+=
+=
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
 &
 &
-!
-swgl
-&
-&
-!
-ccov
+opt
 "
 #
 Bug
@@ -1440,7 +1735,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -1454,20 +1772,25 @@ linux
 '
 &
 &
-!
-asan
+os_version
+=
+=
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
 &
 &
-!
-swgl
-&
-&
-!
-ccov
+opt
 "
 #
 Bug
@@ -1497,7 +1820,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -1511,20 +1857,25 @@ linux
 '
 &
 &
-!
-asan
+os_version
+=
+=
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
 &
 &
-!
-swgl
-&
-&
-!
-ccov
+opt
 "
 #
 Bug
@@ -1545,7 +1896,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -1559,20 +1933,25 @@ linux
 '
 &
 &
-!
-asan
+os_version
+=
+=
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
 &
 &
-!
-swgl
-&
-&
-!
-ccov
+opt
 "
 #
 Bug
@@ -1602,7 +1981,30 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -1616,20 +2018,25 @@ linux
 '
 &
 &
-!
-asan
+os_version
+=
+=
+'
+18
+.
+04
+'
 &
 &
-!
-debug
+processor
+=
+=
+'
+x86_64
+'
 &
 &
-!
-swgl
-&
-&
-!
-ccov
+opt
 "
 #
 Bug
@@ -1785,7 +2192,6 @@ if
 =
 [
 "
-(
 os
 =
 =
@@ -1804,26 +2210,84 @@ os_version
 '
 &
 &
-bits
+processor
 =
 =
-64
-)
+'
+x86_64
+'
 &
 &
-(
-!
-debug
-&
-&
-!
-asan
-)
+opt
 "
-]
 #
 Bug
 1118592
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+tsan
+"
+#
+Bug
+1118592
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+ccov
+"
+#
+Bug
+1118592
+]
 [
 "
 browser_telemetry_button_eyedropper
@@ -1968,6 +2432,32 @@ if
 =
 [
 "
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 a11y_checks
 "
 ]
@@ -1997,6 +2487,32 @@ if
 =
 [
 "
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 a11y_checks
 "
 ]
