--- a/devtools/client/framework/test/browser.toml
+++ b/devtools/client/framework/test/browser.toml
@@ -664,9 +664,6 @@ http3
 #
 Bug
 1829298
-"
-http2
-"
 ]
 [
 "
@@ -690,9 +687,6 @@ http3
 #
 Bug
 1829298
-"
-http2
-"
 ]
 [
 "
@@ -714,9 +708,6 @@ http3
 #
 Bug
 1829298
-"
-http2
-"
 ]
 [
 "
@@ -834,10 +825,22 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
@@ -848,6 +851,24 @@ os
 =
 '
 mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 #
@@ -914,6 +935,24 @@ os
 =
 '
 linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 #
@@ -1009,9 +1048,6 @@ http3
 #
 Bug
 1829298
-"
-http2
-"
 ]
 [
 "
@@ -1068,6 +1104,32 @@ if
 =
 [
 "
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 a11y_checks
 "
 ]
@@ -1117,9 +1179,6 @@ http3
 #
 Bug
 1829298
-"
-http2
-"
 ]
 [
 "
@@ -1146,9 +1205,6 @@ http3
 #
 Bug
 1829298
-"
-http2
-"
 ]
 [
 "
@@ -1225,6 +1281,32 @@ if
 =
 [
 "
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 a11y_checks
 "
 ]
@@ -1691,8 +1773,25 @@ linux
 '
 &
 &
-!
-debug
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 ]
 #
