Bug 1914672: Update browser_relay tests r=issammani,dimi
Fix bug found by test: notification is undefined until "shown" event

Differential Revision: https://phabricator.services.mozilla.com/D222005

UltraBlame original commit: da17043b47ff2bbd4303d46687c2f90e50fb46ee

--- a/toolkit/components/passwordmgr/test/browser/browser.toml
+++ b/toolkit/components/passwordmgr/test/browser/browser.toml
@@ -1713,14 +1713,54 @@ android
 ]
 [
 "
-browser_relay_telemetry
+browser_relay_signup_flow
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+browser_relay_utils
 .
 js
 "
 ]
 [
 "
-browser_relay_visibility
+browser_relay_signup_flow_showToAllBrowsers
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+browser_relay_utils
+.
+js
+"
+]
+[
+"
+browser_relay_telemetry
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+browser_relay_utils
 .
 js
 "
