Bug 1921859 - Copy version.h directly r=media-playback-reviewers,aosmond
Previously, the version.h is generated by `update-version.sh` since the
version.h is built by meson. However, the upstream repo now set the
version.h (and parse it in meson) instead of generating it along with
the meson build, so we can copy the version.h directly instead of
generating one by our own. See more in [1]

[1] https://code.videolan.org/videolan/dav1d/-/commit/74ccc93687b871ec5fdbd93bfd2ef595240b990b

Differential Revision: https://phabricator.services.mozilla.com/D224863

UltraBlame original commit: 7e8fc9d941d68a3695f3b5e78f86a3e0632a3bce

--- a/media/libdav1d/moz.yaml
+++ b/media/libdav1d/moz.yaml
@@ -306,16 +306,6 @@ vcs_version
 .
 h
 '
--
-'
-{
-yaml_dir
-}
-/
-version
-.
-h
-'
 update
 -
 actions
@@ -380,32 +370,20 @@ h
 -
 action
 :
-run
+copy
 -
-script
-script
+file
+from
 :
-'
-{
-yaml_dir
-}
+include
 /
-update
--
+dav1d
+/
 version
 .
-sh
-'
-cwd
+h
+to
 :
-'
-{
-vendor_dir
-}
-'
-args
-:
-[
 '
 {
 yaml_dir
@@ -415,4 +393,3 @@ version
 .
 h
 '
-]
