Bug 1922723 - Enable `contenteditable=plaintext-only` only in the Nightly channel r=m_kato
Let's enable `contenteditable=plaintext-only` only in the Nightly channel to
collect bug reports from the testers.

Depends on D224578

Differential Revision: https://phabricator.services.mozilla.com/D224579

UltraBlame original commit: 99d9463b36e5f0ad24b8b5908a9aeb44fa4d408b

--- a/testing/web-platform/meta/html/editing/editing-0/contenteditable/contenteditable-enumerated-ascii-case-insensitive.html.ini
+++ b/testing/web-platform/meta/html/editing/editing-0/contenteditable/contenteditable-enumerated-ascii-case-insensitive.html.ini
@@ -44,6 +44,10 @@ only
 ]
 expected
 :
+if
+not
+nightly_build
+:
 FAIL
 [
 IDL
@@ -58,6 +62,10 @@ only
 "
 ]
 expected
+:
+if
+not
+nightly_build
 :
 FAIL
 [
@@ -75,6 +83,10 @@ ONLY
 ]
 expected
 :
+if
+not
+nightly_build
+:
 FAIL
 [
 IDL
@@ -89,5 +101,9 @@ ONLY
 "
 ]
 expected
+:
+if
+not
+nightly_build
 :
 FAIL
