--- a/testing/web-platform/meta/html/editing/editing-0/contenteditable/user-interaction-editing-contenteditable.html.ini
+++ b/testing/web-platform/meta/html/editing/editing-0/contenteditable/user-interaction-editing-contenteditable.html.ini
@@ -37,6 +37,10 @@ attribute
 ]
 expected
 :
+if
+not
+nightly_build
+:
 FAIL
 [
 set
@@ -51,5 +55,9 @@ only
 "
 ]
 expected
+:
+if
+not
+nightly_build
 :
 FAIL
