Bug 1866402 - Add testing for clearing by client type; r=dom-storage-reviewers,jari
Differential Revision: https://phabricator.services.mozilla.com/D195420

UltraBlame original commit: fe4a050ac4da83f620b79c8b2f552b6608d9d1d3

--- a/dom/quota/test/xpcshell/xpcshell.toml
+++ b/dom/quota/test/xpcshell/xpcshell.toml
@@ -24,6 +24,16 @@ basics_profile
 zip
 "
 "
+clearStoragesForClient_profile
+.
+json
+"
+"
+clearStoragesForClient_profile
+.
+zip
+"
+"
 clearStoragesForOriginPrefix_profile
 .
 json
@@ -247,6 +257,13 @@ js
 [
 "
 test_basics
+.
+js
+"
+]
+[
+"
+test_clearStoragesForClient
 .
 js
 "
