Bug 1923546 - Disable browser_dragdrop_protected_diff_origin.js temporarily on mac until a fix is in place. a=test-only
UltraBlame original commit: ba301423863e02a50279faf39bb566fa3945007d

--- a/dom/events/test/browser.toml
+++ b/dom/events/test/browser.toml
@@ -146,6 +146,34 @@ browser_dragdrop_protected_diff_origin
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+mac
+'
+"
+#
+Bug
+1923546
+-
+temp
+disabled
+due
+to
+permafails
+until
+a
+fix
+in
+place
+]
 [
 "
 browser_dragdrop_protected_same_origin
