Bug 1908112 - Enable all the certificate compression mechanisms in Release r=jschanck
As discussed the last week during the NSS call, we plan


  - to enable all the cert compression algorithms;
  - uplift it to beta;
  - start (now) the roll-out to release.

Differential Revision: https://phabricator.services.mozilla.com/D224936

UltraBlame original commit: 8a1926792e04315d01600c9d2a26a059cf50d8c9

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -96156,7 +96156,7 @@ type
 RelaxedAtomicBool
 value
 :
-IS_EARLY_BETA_OR_EARLIER
+true
 mirror
 :
 always
@@ -96173,7 +96173,7 @@ type
 RelaxedAtomicBool
 value
 :
-IS_EARLY_BETA_OR_EARLIER
+true
 mirror
 :
 always
@@ -96190,7 +96190,7 @@ type
 RelaxedAtomicBool
 value
 :
-IS_EARLY_BETA_OR_EARLIER
+true
 mirror
 :
 always
