--- a/toolkit/components/antitracking/bouncetrackingprotection/metrics.yaml
+++ b/toolkit/components/antitracking/bouncetrackingprotection/metrics.yaml
@@ -221,6 +221,24 @@ cgi
 id
 =
 1890582
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922601
 data_reviews
 :
 -
@@ -266,7 +284,7 @@ mozilla
 com
 expires
 :
-134
+140
 num_hosts_per_purge_run
 :
 type
@@ -320,6 +338,24 @@ cgi
 id
 =
 1899809
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922601
 data_reviews
 :
 -
@@ -363,7 +399,7 @@ mozilla
 com
 expires
 :
-134
+140
 purge_count
 :
 type
@@ -439,6 +475,24 @@ cgi
 id
 =
 1890578
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922601
 data_reviews
 :
 -
@@ -482,7 +536,7 @@ mozilla
 com
 expires
 :
-134
+140
 labels
 :
 -
@@ -699,6 +753,24 @@ cgi
 id
 =
 1893964
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922601
 data_reviews
 :
 -
@@ -744,7 +816,7 @@ mozilla
 com
 expires
 :
-134
+140
 enabled_dry_run_mode_at_startup
 :
 type
@@ -791,6 +863,24 @@ cgi
 id
 =
 1893964
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922601
 data_reviews
 :
 -
@@ -836,7 +926,7 @@ mozilla
 com
 expires
 :
-134
+140
 purge_count_classified_tracker
 :
 type
@@ -896,6 +986,24 @@ cgi
 id
 =
 1890580
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1922601
 data_reviews
 :
 -
@@ -939,4 +1047,4 @@ mozilla
 com
 expires
 :
-134
+140
