--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -2054,6 +2054,54 @@ mirror
 always
 #
 Whether
+to
+enable
+all
+accessibility
+cache
+domains
+on
+startup
+.
+#
+*
+false
+:
+enable
+domains
+as
+needed
+#
+*
+true
+:
+enable
+all
+domains
+regardless
+of
+need
+(
+cache
+everything
+)
+-
+name
+:
+accessibility
+.
+enable_all_cache_domains
+type
+:
+bool
+value
+:
+false
+mirror
+:
+once
+#
+Whether
 form
 controls
 and
