--- a/taskcluster/kinds/addon/kind.yml
+++ b/taskcluster/kinds/addon/kind.yml
@@ -242,14 +242,68 @@ sparse
 profile
 :
 tps
-when
+optimization
 :
-files
+skip
+-
+unless
+-
+missing
+-
+or
 -
 changed
 :
+#
+index
+path
+where
+task
+should
+be
+found
+(
+if
+missing
+will
+cause
+task
+to
+run
+)
 -
-'
+"
+gecko
+.
+v2
+.
+mozilla
+-
+central
+.
+latest
+.
+firefox
+.
+addons
+.
+tps
+"
+#
+file
+paths
+that
+should
+also
+cause
+task
+to
+run
+when
+modified
+-
+[
+"
 services
 /
 sync
@@ -262,4 +316,5 @@ tps
 /
 *
 *
-'
+"
+]
