Bug 1866402 - Add nsIQuotaManagerService::PersistentOriginInitialized and nsIQuotaManagerService::TemporaryOriginInitialized methods; r=dom-storage-reviewers,jari
This additional testing infrastructure is needed for verifying origin
initialization status.

Differential Revision: https://phabricator.services.mozilla.com/D195526

UltraBlame original commit: aaa63956f3f022575b29059d5909f63079723d3a

--- a/dom/quota/test/xpcshell/xpcshell.toml
+++ b/dom/quota/test/xpcshell/xpcshell.toml
@@ -409,7 +409,21 @@ js
 ]
 [
 "
+test_initializePersistentOrigin
+.
+js
+"
+]
+[
+"
 test_initializeTemporaryClient
+.
+js
+"
+]
+[
+"
+test_initializeTemporaryOrigin
 .
 js
 "
