Bug 1859597 - Part2: add buildid to full and stub installer telemetry r=nalexander
Differential Revision: https://phabricator.services.mozilla.com/D223765

UltraBlame original commit: 507cc2503b8a61bd3f7cfaef15dc6c26e1ddb0a0

--- a/browser/installer/windows/Makefile.in
+++ b/browser/installer/windows/Makefile.in
@@ -75,7 +75,7 @@ instgen
 ifeq
 (
 (
-CPU_ARCH
+TARGET_CPU
 )
 aarch64
 )
@@ -419,6 +419,13 @@ DEFINES
 )
 (
 ACDEFINES
+)
+\
+-
+DTOPOBJDIR
+=
+(
+topobjdir
 )
 \
 (
