--- a/browser/installer/windows/nsis/defines.nsi.in
+++ b/browser/installer/windows/nsis/defines.nsi.in
@@ -2,6 +2,13 @@
 filter
 substitution
 #
+include
+TOPOBJDIR
+/
+buildid
+.
+h
+#
 This
 Source
 Code
@@ -201,6 +208,12 @@ define
 AB_CD
 "
 AB_CD
+"
+!
+define
+MOZ_BUILDID
+"
+MOZ_BUILDID
 "
 !
 define
