--- a/dom/events/test/browser.toml
+++ b/dom/events/test/browser.toml
@@ -181,6 +181,34 @@ browser_dragdrop_protected_same_origin
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+mac
+'
+"
+#
+Bug
+1923546
+-
+temp
+disabled
+due
+to
+permafails
+until
+a
+fix
+in
+place
+]
 [
 "
 browser_dragdrop_unprotected_diff_origin
