Bug 1921401 - Further adjust wpt webcodecs 'temporal-svc-encoding.https.any.js.ini' r=padenot
Differential Revision: https://phabricator.services.mozilla.com/D225173

UltraBlame original commit: 562c705cc9b3195ae87067e71cb622c6757f4400

--- a/testing/web-platform/meta/webcodecs/temporal-svc-encoding.https.any.js.ini
+++ b/testing/web-platform/meta/webcodecs/temporal-svc-encoding.https.any.js.ini
@@ -65,20 +65,6 @@ html
 ?
 vp9
 ]
-expected
-:
-if
-os
-=
-=
-"
-win
-"
-and
-ccov
-:
-ERROR
-OK
 disabled
 :
 if
@@ -362,6 +348,20 @@ html
 ?
 vp8
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+ccov
+:
+ERROR
+OK
 disabled
 :
 if
@@ -376,6 +376,46 @@ android
 :
 not
 implemented
+[
+SVC
+L1T2
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+ccov
+:
+FAIL
+PASS
+[
+SVC
+L1T3
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+ccov
+:
+FAIL
+PASS
 [
 temporal
 -
@@ -503,3 +543,43 @@ android
 :
 not
 implemented
+[
+SVC
+L1T2
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+ccov
+:
+FAIL
+PASS
+[
+SVC
+L1T3
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+ccov
+:
+FAIL
+PASS
