Bug 1922368 [wpt PR 48428] - Update wpt metadata, a=testonly
wpt-pr: 48428
wpt-type: metadata

UltraBlame original commit: 3a11bed41b533b9ba63e8c24c3e6a0f711ec922d

--- a/testing/web-platform/meta/css/css-scoping/has-slotted-changing-001.tentative.html.ini
+++ b/testing/web-platform/meta/css/css-scoping/has-slotted-changing-001.tentative.html.ini
@@ -12,18 +12,58 @@ tentative
 html
 ]
 [
-Changing
-content
-targetting
+empty
+node
+is
+blue
+]
+expected
 :
-has
--
-slotted
-through
-a
-single
-shadow
-root
+FAIL
+[
+setting
+innerHTML
+to
+whitespace
+invalidates
+and
+becomes
+green
+then
+empty
+string
+becomes
+blue
+]
+expected
+:
+FAIL
+[
+calling
+replaceChildren
+invalidates
+and
+becomes
+green
+emptying
+with
+replaceChildren
+becomes
+blue
+]
+expected
+:
+FAIL
+[
+calling
+replaceChildren
+(
+textnode
+)
+invalidates
+and
+becomes
+green
 ]
 expected
 :
