--- a/testing/web-platform/meta/css/css-scoping/has-slotted-changing-002.tentative.html.ini
+++ b/testing/web-platform/meta/css/css-scoping/has-slotted-changing-002.tentative.html.ini
@@ -12,17 +12,41 @@ tentative
 html
 ]
 [
-Changing
-content
-targetting
+empty
+node
+is
+blue
+]
+expected
 :
-has
--
-slotted
-through
-multiple
-shadow
-roots
+FAIL
+[
+manually
+assigning
+a
+text
+node
+is
+green
+emptying
+assignment
+is
+blue
+]
+expected
+:
+FAIL
+[
+manually
+assigning
+a
+Element
+is
+green
+emptying
+assignment
+is
+blue
 ]
 expected
 :
