Bug 1922378 [wpt PR 48430] - [ExtendedTextMetrics] Fix mixed bidi caretPositionFromPoint, a=testonly
Automatic update from web-platform-tests
[ExtendedTextMetrics] Fix mixed bidi caretPositionFromPoint

Mixed bidi text runs are always challenging when it comes to
PositionFromOffset and related methods, because a particular
location where the direction changes is the start of two runs
or the end of two runs. The choice of which index to return
depends on what the offset is going to be used for.

This CL changes caretPositionFromPoint to adjust the position
returned when at the end of a text run that does not match the
overall text direction. The position is moved to a neighboring
run to match the behavior of the DOM method, which in this case
is also probably better for building selection and insert behavior.

Fixed: 364332944
Change-Id: I742f567cdf0e9a116d5d430d47d952a0f7c04301
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5889819
Reviewed-by: Andres Ricardo Perez <andresrperezchromium.org>
Commit-Queue: Stephen Chenney <schenneychromium.org>
Cr-Commit-Position: refs/heads/main{#1363262}

--

wpt-commits: f458a7d7143352677b3f0cac521c9a6f1b3bca55
wpt-pr: 48430

UltraBlame original commit: 80f420c81443482ba13becb8a467a128ac6e8f11

--- a/testing/web-platform/tests/html/canvas/tools/yaml-new/text.yaml
+++ b/testing/web-platform/tests/html/canvas/tools/yaml-new/text.yaml
@@ -13491,6 +13491,10 @@ UNAVAILABLE
 '
 '
 '
+'
+'
+'
+'
 -
 -
 abcd__
@@ -13622,6 +13626,59 @@ offset
 text_width
 /
 2
+-
+10
+;
+adjusted_offset
+=
+alignOffset
+(
+offset
+text_width
+)
+;
+tm_position
+=
+tm
+.
+caretPositionFromPoint
+(
+adjusted_offset
+)
+;
+doc_position
+=
+placeAndMeasureTextInDOM
+(
+text
+text_width
+adjusted_offset
+)
+;
+assert_equals
+(
+tm_position
+doc_position
+"
+for
+"
++
+text
++
+"
+offset
+"
++
+offset
+)
+;
+offset
+=
+text_width
+/
+2
++
+10
 ;
 adjusted_offset
 =
