Bug 1922795 [wpt PR 48469] - Update wpt metadata, a=testonly
wpt-pr: 48469
wpt-type: metadata

UltraBlame original commit: 79ec3973061c26b94faa6c846fd56a31c6bef14e

--- a/testing/web-platform/meta/css/css-view-transitions/parsing/view-transition-name-valid.html.ini
+++ b/testing/web-platform/meta/css/css-view-transitions/parsing/view-transition-name-valid.html.ini
@@ -25,88 +25,7 @@ name
 ]
 =
 "
-none
-"
-should
-set
-the
-property
-value
-]
-expected
-:
-FAIL
-[
-e
-.
-style
-[
-'
-view
--
-transition
--
-name
-'
-\
-]
-=
-"
-foo
-"
-should
-set
-the
-property
-value
-]
-expected
-:
-FAIL
-[
-e
-.
-style
-[
-'
-view
--
-transition
--
-name
-'
-\
-]
-=
-"
-bar
-"
-should
-set
-the
-property
-value
-]
-expected
-:
-FAIL
-[
-e
-.
-style
-[
-'
-view
--
-transition
--
-name
-'
-\
-]
-=
-"
-baz
+auto
 "
 should
 set
