Bug 1923020 [wpt PR 48493] - Update wpt metadata, a=testonly
wpt-pr: 48493
wpt-type: metadata

UltraBlame original commit: 12a39d33a677d1a0895c14850a661df019e82bec

--- a/testing/web-platform/meta/css/css-inline/initial-letter/initial-letter-raise-initial.html.ini
+++ b/testing/web-platform/meta/css/css-inline/initial-letter/initial-letter-raise-initial.html.ini
@@ -25,23 +25,6 @@ html
 ?
 class
 =
-]
-expected
-:
-FAIL
-[
-initial
--
-letter
--
-raise
--
-initial
-.
-html
-?
-class
-=
 no
 -
 descent
@@ -62,9 +45,44 @@ html
 ?
 class
 =
+]
+expected
+:
+FAIL
+[
+initial
+-
+letter
+-
+raise
+-
+initial
+.
+html
+?
+class
+=
 no
 -
 ascent
+]
+expected
+:
+FAIL
+[
+initial
+-
+letter
+-
+raise
+-
+initial
+.
+html
+?
+class
+=
+rtl
 ]
 expected
 :
