--- a/testing/web-platform/meta/html/cross-origin-opener-policy/tentative/noopener/coop-noopener-allow-popups-restrict-properties.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-opener-policy/tentative/noopener/coop-noopener-allow-popups-restrict-properties.https.html.ini
@@ -91,3 +91,100 @@ popups
 expected
 :
 FAIL
+[
+\
+n
+Cross
+-
+Origin
+-
+Opener
+-
+Policy
+:
+noopener
+-
+allow
+-
+popups
+means
+that
+the
+opener
+\
+n
+has
+no
+access
+to
+the
+openee
+.
+This
+test
+verfies
+it
+for
+restrict
+-
+properties
+\
+n
+COOP
+values
+.
+\
+n
+]
+expected
+:
+FAIL
+[
+\
+n
+Cross
+-
+Origin
+-
+Opener
+-
+Policy
+:
+noopener
+-
+allow
+-
+popups
+means
+that
+the
+opener
+\
+n
+has
+no
+access
+to
+the
+openee
+.
+This
+test
+verfies
+it
+for
+restrict
+-
+properties
+\
+n
+COOP
+values
+.
+\
+n
+1
+]
+expected
+:
+FAIL
