--- a/testing/web-platform/meta/html/cross-origin-opener-policy/tentative/noopener/coop-noopener-allow-popups.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-opener-policy/tentative/noopener/coop-noopener-allow-popups.https.html.ini
@@ -11,21 +11,6 @@ https
 .
 html
 ]
-expected
-:
-if
-os
-=
-=
-"
-android
-"
-:
-OK
-[
-TIMEOUT
-ERROR
-]
 [
 noopener
 -
@@ -375,4 +360,218 @@ android
 "
 :
 FAIL
-NOTRUN
+[
+\
+n
+Cross
+-
+Origin
+-
+Opener
+-
+Policy
+:
+noopener
+-
+allow
+-
+popups
+means
+that
+the
+opener
+\
+n
+has
+no
+access
+to
+the
+openee
+.
+\
+n
+]
+expected
+:
+FAIL
+[
+\
+n
+Cross
+-
+Origin
+-
+Opener
+-
+Policy
+:
+noopener
+-
+allow
+-
+popups
+means
+that
+the
+opener
+\
+n
+has
+no
+access
+to
+the
+openee
+.
+\
+n
+1
+]
+expected
+:
+FAIL
+[
+\
+n
+Cross
+-
+Origin
+-
+Opener
+-
+Policy
+:
+noopener
+-
+allow
+-
+popups
+means
+that
+the
+opener
+\
+n
+has
+no
+access
+to
+the
+openee
+.
+\
+n
+2
+]
+expected
+:
+FAIL
+[
+\
+n
+Cross
+-
+Origin
+-
+Opener
+-
+Policy
+:
+noopener
+-
+allow
+-
+popups
+means
+that
+the
+opener
+\
+n
+has
+no
+access
+to
+the
+openee
+.
+\
+n
+3
+]
+expected
+:
+FAIL
+[
+\
+n
+Cross
+-
+Origin
+-
+Opener
+-
+Policy
+:
+noopener
+-
+allow
+-
+popups
+means
+that
+the
+opener
+\
+n
+has
+no
+access
+to
+the
+openee
+.
+\
+n
+4
+]
+expected
+:
+FAIL
+[
+\
+n
+Cross
+-
+Origin
+-
+Opener
+-
+Policy
+:
+noopener
+-
+allow
+-
+popups
+means
+that
+the
+opener
+\
+n
+has
+no
+access
+to
+the
+openee
+.
+\
+n
+5
+]
+expected
+:
+FAIL
