--- a/testing/web-platform/meta/webaudio/the-audio-api/the-audiocontext-interface/processing-after-resume.https.html.ini
+++ b/testing/web-platform/meta/webaudio/the-audio-api/the-audiocontext-interface/processing-after-resume.https.html.ini
@@ -27,3 +27,91 @@ fission
 OK
 TIMEOUT
 ]
+[
+Test
+consistency
+of
+processing
+after
+resume
+(
+)
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+PASS
+FAIL
+]
