Bug 1923419 - [wpt-sync] Update web-platform-tests to ec979384f0340b8d18c3512f02f42b65bd5f456c, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: ec979384f0340b8d18c3512f02f42b65bd5f456c
wpt-type: landing

UltraBlame original commit: a0570f59db640f98cf2bf11d114e57836d7d6341

--- a/testing/web-platform/meta/audio-output/enumerateDevices-permissions-policy.https.html.ini
+++ b/testing/web-platform/meta/audio-output/enumerateDevices-permissions-policy.https.html.ini
@@ -34,15 +34,6 @@ expected
 :
 if
 (
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-(
 os
 =
 =
@@ -63,15 +54,6 @@ CRASH
 ]
 if
 (
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-(
 os
 =
 =
@@ -89,11 +71,11 @@ TIMEOUT
 ]
 if
 (
-processor
+os
 =
 =
 "
-x86
+mac
 "
 )
 and
@@ -102,7 +84,7 @@ debug
 :
 [
 OK
-TIMEOUT
+CRASH
 ]
 [
 permissions
@@ -120,37 +102,11 @@ expected
 :
 if
 (
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-(
 os
 =
 =
 "
 win
-"
-)
-and
-not
-debug
-:
-[
-PASS
-TIMEOUT
-]
-if
-(
-processor
-=
-=
-"
-x86
 "
 )
 and
