--- a/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp_faster_collector.https.window.js.ini
+++ b/testing/web-platform/meta/compute-pressure/compute_pressure_timestamp_faster_collector.https.window.js.ini
@@ -49,6 +49,28 @@ dedicated_worker
 ]
 expected
 :
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+TIMEOUT
 ERROR
 [
 Faster
