--- a/testing/web-platform/meta/html/cross-origin-opener-policy/tentative/noopener/coop-noopener-allow-popups.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-opener-policy/tentative/noopener/coop-noopener-allow-popups.https.html.ini
@@ -11,83 +11,17 @@ https
 .
 html
 ]
-[
-noopener
--
-allow
--
-popups
-ensures
-that
-the
-opener
-cannot
-script
-the
-openee
-but
-further
-popups
-with
-no
-COOP
-can
-access
-their
-opener
-:
-noopener
--
-allow
--
-popups
-/
-unsafe
--
-none
-]
 expected
 :
-FAIL
-[
-noopener
--
-allow
--
-popups
-ensures
-that
-the
-opener
-cannot
-script
-the
-openee
-but
-further
-popups
-with
-no
-COOP
-can
-access
-their
-opener
+if
+os
+=
+=
+"
+mac
+"
 :
-noopener
--
-allow
--
-popups
-/
-noopener
--
-allow
--
-popups
-]
-expected
-:
+TIMEOUT
 if
 os
 =
@@ -96,236 +30,11 @@ os
 android
 "
 :
-FAIL
+OK
 [
 TIMEOUT
-FAIL
+ERROR
 ]
-[
-noopener
--
-allow
--
-popups
-ensures
-that
-the
-opener
-cannot
-script
-the
-openee
-but
-further
-popups
-with
-no
-COOP
-can
-access
-their
-opener
-:
-noopener
--
-allow
--
-popups
-/
-same
--
-origin
-]
-expected
-:
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-asan
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
-tsan
-:
-[
-NOTRUN
-TIMEOUT
-]
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
-NOTRUN
-[
-noopener
--
-allow
--
-popups
-ensures
-that
-the
-opener
-cannot
-script
-the
-openee
-but
-further
-popups
-with
-no
-COOP
-can
-access
-their
-opener
-:
-noopener
--
-allow
--
-popups
-/
-same
--
-origin
--
-allow
--
-popups
-]
-expected
-:
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
-NOTRUN
-[
-noopener
--
-allow
--
-popups
-ensures
-that
-the
-opener
-cannot
-script
-the
-openee
-but
-further
-popups
-with
-no
-COOP
-can
-access
-their
-opener
-:
-same
--
-origin
--
-allow
--
-popups
-/
-noopener
--
-allow
--
-popups
-]
-expected
-:
-if
-os
-=
-=
-"
-android
-"
-:
-FAIL
-NOTRUN
-[
-noopener
--
-allow
--
-popups
-ensures
-that
-the
-opener
-cannot
-script
-the
-openee
-but
-further
-popups
-with
-no
-COOP
-can
-access
-their
-opener
-:
-same
--
-origin
-/
-noopener
--
-allow
--
-popups
-]
-expected
-:
-if
-os
-=
-=
-"
-android
-"
-:
-PASS
-NOTRUN
 [
 noopener
 -
@@ -360,6 +69,7 @@ android
 "
 :
 FAIL
+NOTRUN
 [
 \
 n
@@ -430,7 +140,40 @@ n
 ]
 expected
 :
+if
+os
+=
+=
+"
+win
+"
+:
+[
+TIMEOUT
 FAIL
+]
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+FAIL
+TIMEOUT
+]
+if
+os
+=
+=
+"
+android
+"
+:
+FAIL
+TIMEOUT
 [
 \
 n
@@ -466,7 +209,28 @@ n
 ]
 expected
 :
+if
+os
+=
+=
+"
+linux
+"
+:
+[
+NOTRUN
+TIMEOUT
+]
+if
+os
+=
+=
+"
+android
+"
+:
 FAIL
+NOTRUN
 [
 \
 n
@@ -502,7 +266,16 @@ n
 ]
 expected
 :
+if
+os
+=
+=
+"
+android
+"
+:
 FAIL
+NOTRUN
 [
 \
 n
@@ -538,7 +311,16 @@ n
 ]
 expected
 :
+if
+os
+=
+=
+"
+android
+"
+:
 FAIL
+NOTRUN
 [
 \
 n
@@ -574,4 +356,58 @@ n
 ]
 expected
 :
+if
+os
+=
+=
+"
+android
+"
+:
 FAIL
+NOTRUN
+[
+\
+n
+Cross
+-
+Origin
+-
+Opener
+-
+Policy
+:
+noopener
+-
+allow
+-
+popups
+means
+that
+the
+opener
+\
+n
+has
+no
+access
+to
+the
+openee
+.
+\
+n
+6
+]
+expected
+:
+if
+os
+=
+=
+"
+android
+"
+:
+PASS
+NOTRUN
