--- a/testing/web-platform/meta/largest-contentful-paint/resized-image-not-reconsidered.html.ini
+++ b/testing/web-platform/meta/largest-contentful-paint/resized-image-not-reconsidered.html.ini
@@ -34,9 +34,6 @@ linux
 "
 )
 and
-not
-debug
-and
 (
 processor
 =
@@ -47,6 +44,9 @@ x86_64
 )
 and
 not
+debug
+and
+not
 tsan
 :
 [
@@ -54,9 +54,47 @@ PASS
 FAIL
 ]
 if
+not
 asan
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
 :
 [
 PASS
 FAIL
+]
+if
+asan
+and
+fission
+:
+[
+PASS
+FAIL
+]
+if
+asan
+and
+not
+fission
+:
+[
+FAIL
+PASS
 ]
