--- a/testing/web-platform/meta/screen-capture/permissions-policy-video.https.sub.html.ini
+++ b/testing/web-platform/meta/screen-capture/permissions-policy-video.https.sub.html.ini
@@ -14,23 +14,6 @@ html
 expected
 :
 if
-not
-asan
-and
-fission
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
-tsan
-and
 (
 os
 =
@@ -42,16 +25,6 @@ win
 and
 not
 debug
-:
-[
-OK
-ERROR
-]
-if
-not
-asan
-and
-fission
 and
 (
 processor
@@ -61,10 +34,12 @@ processor
 x86_64
 "
 )
-and
-not
-tsan
-and
+:
+[
+OK
+ERROR
+]
+if
 (
 os
 =
@@ -81,23 +56,6 @@ OK
 ERROR
 ]
 if
-not
-asan
-and
-fission
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
-tsan
-and
 (
 os
 =
@@ -114,43 +72,6 @@ debug
 OK
 ERROR
 ]
-if
-not
-asan
-and
-fission
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-tsan
-:
-[
-OK
-ERROR
-]
-if
-asan
-and
-fission
-:
-[
-OK
-ERROR
-]
-if
-asan
-and
-not
-fission
-:
-CRASH
 [
 Default
 "
@@ -193,6 +114,140 @@ debug
 PASS
 FAIL
 ]
+if
+os
+=
+=
+"
+android
+"
+:
+FAIL
+[
+Default
+"
+display
+-
+capture
+"
+permissions
+policy
+[
+"
+self
+"
+\
+]
+allows
+same
+-
+origin
+iframes
+.
+]
+expected
+:
+if
+os
+=
+=
+"
+android
+"
+:
+FAIL
+[
+Default
+"
+display
+-
+capture
+"
+permissions
+policy
+[
+"
+self
+"
+\
+]
+disallows
+cross
+-
+origin
+iframes
+.
+]
+expected
+:
+if
+os
+=
+=
+"
+android
+"
+:
+FAIL
+[
+permissions
+policy
+"
+display
+-
+capture
+"
+can
+be
+disabled
+in
+same
+-
+origin
+iframes
+using
+"
+allow
+"
+attribute
+.
+]
+expected
+:
+if
+os
+=
+=
+"
+android
+"
+:
+FAIL
+[
+permissions
+policy
+"
+display
+-
+capture
+"
+can
+be
+enabled
+in
+cross
+-
+origin
+iframes
+using
+"
+allow
+"
+attribute
+.
+]
+expected
+:
 if
 os
 =
