--- a/testing/web-platform/meta/scroll-to-text-fragment/find-range-from-text-directive.html.ini
+++ b/testing/web-platform/meta/scroll-to-text-fragment/find-range-from-text-directive.html.ini
@@ -11,6 +11,15 @@ directive
 .
 html
 ]
+expected
+:
+if
+asan
+and
+not
+fission
+:
+TIMEOUT
 [
 start
 element
@@ -27,4 +36,77 @@ boundary
 ]
 expected
 :
+if
+asan
+and
+not
+fission
+:
+NOTRUN
 FAIL
+[
+start
+element
+contains
+hidden
+text
+which
+is
+a
+block
+boundary
+.
+]
+expected
+:
+if
+asan
+and
+not
+fission
+:
+TIMEOUT
+[
+start
+element
+contains
+search
+-
+invisible
+text
+(
+image
+)
+.
+]
+expected
+:
+if
+asan
+and
+not
+fission
+:
+NOTRUN
+[
+start
+element
+contains
+search
+-
+invisible
+text
+(
+iframe
+)
+.
+]
+expected
+:
+if
+asan
+and
+not
+fission
+:
+NOTRUN
