--- a/testing/web-platform/meta/video-rvfc/request-video-frame-callback-repeating.html.ini
+++ b/testing/web-platform/meta/video-rvfc/request-video-frame-callback-repeating.html.ini
@@ -29,12 +29,6 @@ parameters
 expected
 :
 if
-not
-tsan
-and
-not
-fission
-and
 (
 os
 =
@@ -44,14 +38,23 @@ linux
 "
 )
 and
+not
 debug
-:
-[
-PASS
-FAIL
-]
-if
+and
+not
 tsan
+and
+not
+asan
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 :
 [
 PASS
@@ -67,7 +70,24 @@ linux
 "
 )
 and
-fission
+not
+debug
+and
+tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 debug
 :
