--- a/testing/web-platform/meta/webaudio/the-audio-api/the-audiocontext-interface/processing-after-resume.https.html.ini
+++ b/testing/web-platform/meta/webaudio/the-audio-api/the-audiocontext-interface/processing-after-resume.https.html.ini
@@ -9,24 +9,6 @@ https
 .
 html
 ]
-expected
-:
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-fission
-:
-[
-OK
-TIMEOUT
-]
 [
 Test
 consistency
@@ -56,38 +38,13 @@ processor
 =
 =
 "
-x86_64
-"
-)
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-debug
-and
-(
-processor
-=
-=
-"
 x86
 "
 )
 :
 [
-PASS
 FAIL
+PASS
 ]
 if
 (
@@ -107,10 +64,47 @@ processor
 =
 =
 "
-x86_64
+x86
 "
 )
 :
+FAIL
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+PASS
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+not
+tsan
+:
+PASS
+if
+os
+=
+=
+"
+android
+"
+:
+PASS
 [
 PASS
 FAIL
