--- a/testing/web-platform/meta/webdriver/tests/bidi/browsing_context/navigate/__dir__.ini
+++ b/testing/web-platform/meta/webdriver/tests/bidi/browsing_context/navigate/__dir__.ini
@@ -1,16 +1,3 @@
-lsan
--
-allowed
-:
-[
-mozilla
-:
-:
-detail
-:
-:
-HashTable
-]
 leak
 -
 threshold
@@ -19,4 +6,45 @@ threshold
 tab
 :
 358400
+]
+lsan
+-
+allowed
+:
+[
+'
+[
+0
+191
+"
+WebDriver
+:
+SwitchToWindow
+"
+{
+"
+handle
+"
+:
+"
+09749ff1
+-
+2163
+-
+4233
+-
+813f
+-
+0541541df959
+"
+}
+]
+'
+mozilla
+:
+:
+detail
+:
+:
+HashTable
 ]
