--- a/testing/web-platform/meta/webdriver/tests/classic/find_elements/user_prompts.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/classic/find_elements/user_prompts.py.ini
@@ -4,19 +4,23 @@ user_prompts
 py
 ]
 [
-test_accept
+test_ignore
 [
 capabilities0
 -
 alert
--
-None
 \
 ]
 ]
 expected
 :
 if
+not
+fission
+and
+not
+debug
+and
 (
 os
 =
@@ -25,9 +29,6 @@ os
 android
 "
 )
-and
-not
-debug
 :
 [
 PASS
