--- a/testing/web-platform/meta/content-security-policy/webrtc/webrtc-allowed-explicit.html.ini
+++ b/testing/web-platform/meta/content-security-policy/webrtc/webrtc-allowed-explicit.html.ini
@@ -21,6 +21,42 @@ expected
 :
 if
 (
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
 processor
 =
 =
@@ -28,8 +64,6 @@ processor
 x86
 "
 )
-and
-debug
 :
 [
 PASS
