--- a/testing/web-platform/meta/html/browsers/the-window-object/open-close/open-features-negative-screenx-screeny.html.ini
+++ b/testing/web-platform/meta/html/browsers/the-window-object/open-close/open-features-negative-screenx-screeny.html.ini
@@ -23,30 +23,8 @@ android
 "
 )
 and
-fission
-:
-[
-OK
-TIMEOUT
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
+not
+debug
 :
 [
 OK
