--- a/testing/web-platform/meta/screen-capture/permissions-policy-audio+video.https.sub.html.ini
+++ b/testing/web-platform/meta/screen-capture/permissions-policy-audio+video.https.sub.html.ini
@@ -26,9 +26,6 @@ win
 )
 and
 debug
-and
-not
-swgl
 :
 [
 OK
@@ -76,6 +73,140 @@ debug
 PASS
 FAIL
 ]
+if
+os
+=
+=
+"
+android
+"
+:
+FAIL
+[
+Default
+"
+display
+-
+capture
+"
+permissions
+policy
+[
+"
+self
+"
+\
+]
+allows
+same
+-
+origin
+iframes
+.
+]
+expected
+:
+if
+os
+=
+=
+"
+android
+"
+:
+FAIL
+[
+Default
+"
+display
+-
+capture
+"
+permissions
+policy
+[
+"
+self
+"
+\
+]
+disallows
+cross
+-
+origin
+iframes
+.
+]
+expected
+:
+if
+os
+=
+=
+"
+android
+"
+:
+FAIL
+[
+permissions
+policy
+"
+display
+-
+capture
+"
+can
+be
+disabled
+in
+same
+-
+origin
+iframes
+using
+"
+allow
+"
+attribute
+.
+]
+expected
+:
+if
+os
+=
+=
+"
+android
+"
+:
+FAIL
+[
+permissions
+policy
+"
+display
+-
+capture
+"
+can
+be
+enabled
+in
+cross
+-
+origin
+iframes
+using
+"
+allow
+"
+attribute
+.
+]
+expected
+:
 if
 os
 =
