Bug 1920733 - Adjust fuzzy annotations etc for testcases affected by disabling the forced-gdi-classic rendering pref. r=gfx-reviewers,lsalzman
Differential Revision: https://phabricator.services.mozilla.com/D225074

UltraBlame original commit: f28e910b3409392db21876fe891b5c83ae18a20e

--- a/testing/web-platform/meta/css/css-text-decor/text-emphasis-style-012.html.ini
+++ b/testing/web-platform/meta/css/css-text-decor/text-emphasis-style-012.html.ini
@@ -1,9 +1,11 @@
 [
-transform
+text
 -
-input
+emphasis
 -
-014
+style
+-
+012
 .
 html
 ]
@@ -21,24 +23,10 @@ maxDifference
 =
 0
 -
-137
+76
 ;
 totalPixels
 =
 0
 -
-586
-expected
-:
-if
-os
-=
-=
-"
-mac
-"
-:
-[
-PASS
-FAIL
-]
+12
