--- a/testing/web-platform/meta/html/semantics/forms/the-option-element/dynamic-content-change-rendering.html.ini
+++ b/testing/web-platform/meta/html/semantics/forms/the-option-element/dynamic-content-change-rendering.html.ini
@@ -9,6 +9,27 @@ rendering
 .
 html
 ]
+fuzzy
+:
+if
+os
+=
+=
+"
+win
+"
+:
+maxDifference
+=
+0
+-
+190
+;
+totalPixels
+=
+0
+-
+28
 expected
 :
 if
