--- a/testing/web-platform/meta/css/css-text-decor/text-emphasis-style-021.html.ini
+++ b/testing/web-platform/meta/css/css-text-decor/text-emphasis-style-021.html.ini
@@ -1,9 +1,11 @@
 [
-transform
+text
 -
-input
+emphasis
 -
-014
+style
+-
+021
 .
 html
 ]
@@ -21,24 +23,10 @@ maxDifference
 =
 0
 -
-137
+89
 ;
 totalPixels
 =
 0
 -
-586
-expected
-:
-if
-os
-=
-=
-"
-mac
-"
-:
-[
-PASS
-FAIL
-]
+19
