--- a/toolkit/components/antitracking/bouncetrackingprotection/metrics.yaml
+++ b/toolkit/components/antitracking/bouncetrackingprotection/metrics.yaml
@@ -576,6 +576,18 @@ mozilla
 org
 /
 1889444
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+1922602
 data_reviews
 :
 -
@@ -629,7 +641,7 @@ tracking
 protection
 expires
 :
-134
+140
 extra_keys
 :
 site_host
