Bug 1923422 - Add debuggable build GeckoView config to specify custom target profile path for UI tests r=ohorvath
Differential Revision: https://phabricator.services.mozilla.com/D224977

UltraBlame original commit: f7deb256026cfbc0b0d8b54f2db1081630551169

--- a/mobile/android/fenix/automation/taskcluster/androidTest/flank-arm64-v8a.yml
+++ b/mobile/android/fenix/automation/taskcluster/androidTest/flank-arm64-v8a.yml
@@ -110,7 +110,69 @@ pull
 /
 sdcard
 /
-screenshots
+Android
+/
+data
+/
+org
+.
+mozilla
+.
+fenix
+.
+debug
+/
+minidumps
+other
+-
+files
+:
+/
+data
+/
+local
+/
+tmp
+/
+org
+.
+mozilla
+.
+fenix
+.
+debug
+-
+geckoview
+-
+config
+.
+yaml
+:
+.
+/
+automation
+/
+taskcluster
+/
+androidTest
+/
+geckoview
+-
+configs
+/
+org
+.
+mozilla
+.
+fenix
+.
+debug
+-
+geckoview
+-
+config
+.
+yaml
 performance
 -
 metrics
