--- a/mobile/android/focus-android/automation/taskcluster/androidTest/flank-arm64-v8a.yml
+++ b/mobile/android/focus-android/automation/taskcluster/androidTest/flank-arm64-v8a.yml
@@ -110,7 +110,69 @@ pull
 /
 sdcard
 /
-screenshots
+Android
+/
+data
+/
+org
+.
+mozilla
+.
+focus
+.
+debug
+/
+minidumps
+other
+-
+files
+:
+/
+data
+/
+local
+/
+tmp
+/
+org
+.
+mozilla
+.
+focus
+.
+debug
+-
+geckoview
+-
+config
+.
+yaml
+:
+.
+/
+automation
+/
+taskcluster
+/
+androidTest
+/
+geckoview
+-
+configs
+/
+org
+.
+mozilla
+.
+focus
+.
+debug
+-
+geckoview
+-
+config
+.
+yaml
 performance
 -
 metrics
