--- a/taskcluster/config.yml
+++ b/taskcluster/config.yml
@@ -712,6 +712,153 @@ fission
 enabled
 '
 '
+Btime
+-
+slow3G
+'
+:
+'
+Browsertime
+network
+benchmark
+tests
+with
+slow3G
+condition
+'
+'
+Btime
+-
+ChR
+-
+slow3G
+'
+:
+'
+Browsertime
+network
+benchmark
+tests
+with
+slow3G
+condition
+'
+'
+Btime
+-
+CaR
+-
+slow3G
+'
+:
+'
+Browsertime
+network
+benchmark
+tests
+with
+slow3G
+condition
+'
+'
+Btime
+-
+fast5G
+'
+:
+'
+Browsertime
+network
+benchmark
+tests
+with
+fast5G
+condition
+'
+'
+Btime
+-
+ChR
+-
+fast5G
+'
+:
+'
+Browsertime
+network
+benchmark
+tests
+with
+fast5G
+condition
+'
+'
+Btime
+-
+CaR
+-
+fast5G
+'
+:
+'
+Browsertime
+network
+benchmark
+tests
+with
+fast5G
+condition
+'
+'
+Btime
+-
+busy5G
+'
+:
+'
+Browsertime
+network
+benchmark
+tests
+with
+busy5G
+condition
+'
+'
+Btime
+-
+ChR
+-
+busy5G
+'
+:
+'
+Browsertime
+network
+benchmark
+tests
+with
+busy5G
+condition
+'
+'
+Btime
+-
+CaR
+-
+busy5G
+'
+:
+'
+Browsertime
+network
+benchmark
+tests
+with
+busy5G
+condition
+'
+'
 Fetch
 '
 :
