--- a/taskcluster/kinds/test/browsertime-desktop.yml
+++ b/taskcluster/kinds/test/browsertime-desktop.yml
@@ -5047,6 +5047,163 @@ h3
 -
 down
 ]
+network
+-
+conditions
+:
+by
+-
+subtest
+:
+h3
+-
+upload
+:
+-
+[
+slow3G
+"
+0
+"
+]
+-
+[
+slow3G
+"
+0
+.
+01
+"
+]
+-
+[
+slow3G
+"
+0
+.
+1
+"
+]
+-
+[
+slow3G
+"
+0
+.
+5
+"
+]
+-
+[
+fast5G
+"
+0
+"
+]
+-
+[
+fast5G
+"
+0
+.
+01
+"
+]
+-
+[
+fast5G
+"
+0
+.
+1
+"
+]
+-
+[
+fast5G
+"
+0
+.
+5
+"
+]
+-
+[
+fast5G
+"
+1
+"
+]
+-
+[
+busy5G
+"
+0
+"
+]
+-
+[
+busy5G
+"
+0
+.
+01
+"
+]
+-
+[
+busy5G
+"
+0
+.
+1
+"
+]
+-
+[
+busy5G
+"
+0
+.
+5
+"
+]
+-
+[
+busy5G
+"
+1
+"
+]
+h3
+-
+download
+:
+-
+[
+slow3G
+"
+0
+"
+]
+-
+[
+fast5G
+"
+0
+"
+]
+-
+[
+busy5G
+"
+0
+"
+]
+default
+:
+[
+]
 description
 :
 Raptor
@@ -5065,7 +5222,7 @@ run
 -
 time
 :
-2700
+4500
 run
 -
 on
